Tela caixa - Ref pessoa aba Cartoes - Mostrar valores da mes anterior Liberar edicao de vencimento de parcela quando estiver vinculado com cartao de credito Tela de cartao - somar itens selecionados Colocar filtro de aberto finalizado e cancelado na pesquisa de contas

--- a/CFP.App/Formularios/Financeiros/UserControlCartoesCredito.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCartoesCredito.xaml
@@ -161,7 +161,7 @@
                                           AutoGenerateColumns="False" 
                                           VerticalScrollBarVisibility="Auto" 
                                           IsReadOnly="True"
-                                          TabIndex="6" Margin="0,0,0,0">
+                                          TabIndex="6" Margin="0,0,0,0" MouseUp="dgCartaoCredito_MouseUp">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Parcela" Binding="{Binding NumeroParcelas}" />
                         <DataGridTextColumn Header="Data" Binding="{Binding DataCompra, StringFormat=d,  ConverterCulture='pt-BR'}" />
