--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmacaoPagamentoParcela.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmacaoPagamentoParcela.xaml
@@ -236,12 +236,12 @@
                         <Button x:Name="btConfirmar"
                                 Grid.Column="2"
                                 Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
-                                Height="50" Width="50" 
+                                Height="Auto" Width="50" 
                                 Background="#FF1F3D68" 
                                 HorizontalAlignment="Right"
                                 BorderBrush="#FF1F3D68" 
                                 Click="btConfirmar_Click" 
-                                TabIndex="7" Margin="0,0,0.2,-0.4" VerticalAlignment="Top" >
+                                TabIndex="7" >
                             <materialDesign:PackIcon 
                                  Kind="Check"  
                                  Width="50" 
